# TNL-MHFEM

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
examples/: CMakeLists.txt  config.h  config_cuda.h  config_host.h  main.h
examples/HeatEquation/: CMakeLists.txt  HeatEquationModel.h  HeatEquation_cuda.cu  HeatEquation_host.cpp  config.ini  config_models.h  init.py  run.py
examples/HeatEquation/meshes/: mrizka_1.rcm.vtk  mrizka_2.rcm.vtk  mrizka_3.rcm.vtk  mrizka_4.rcm.vtk  mrizka_5.rcm.vtk
include/: CMakeLists.txt
include/TNL/MHFEM/: AdjacencyOperator.h  AdjacencyOperatorBoundary.h  AdjacencyOperatorBoundary_impl.h  AdjacencyOperator_impl.h  BaseModel.h  BaseModel_impl.h  BasisFunctions_RTN0.h  BoundaryConditions.h  BoundaryConditions.hpp  BoundaryConditionsStorage.h  BoundaryConditionsType.h  BoundaryConditions_impl.h  DifferentialOperator.h  DifferentialOperator_impl.h  HybridizationExplicitFunction.h  LinearSystem.h  LocalUpdaters.h  MassLumpingDependentCoefficients.h  MassMatrix.h  MassMatrixDependentCode.h  MeshOrdering.h  QRupdater.h  RightHandSide.h  SecondaryCoefficients.h  Solver.h  Solver.hpp  Solver_impl.h  UniformCoefficient.h  Upwind.h  configSetup.h  control.h  mesh_helpers.h
include/TNL/MHFEM/BoundaryModels/: Stationary.h
src/: CMakeLists.txt
src/Python/: CMakeLists.txt
src/Python/TNL/MHFEM/: argtypes.py  capture.py  fd_redirector.py  mesh_utils.py
src/pytnl/: BoundaryConditionsStorage.h  CMakeLists.txt  tnl_mhfem.cpp
